--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
 	<h1>Pro Services</h1>
 	<script>
-		/*$.getJSON("sample.json", function(json) {
+		$.getJSON("sample.json", function(json) {
 			console.log(json); // this will show the info it in firebug console
-		});*/
-		var json = require('./sample.json');
-		console.log(json);
+		});
 	</script>
 </body>
 </html>
